--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,8 @@ import Header from "../components/Header.astro";
 		<title>SolA-Cosmetic</title>
 	</head>
 	<body class="flex w-96 text-xl">
-    <Header />
+    <div class="bg-[#E3CBBD] h-screen border-r-2 border-r-gray-500"><Header /></div>
+    
 		<slot />
 	</body>
 </html>
