--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,10 @@
 ---
 import "@fontsource/caveat-brush";
 import { NavItem } from "./NavItem";
+import { BsFillHouseDoorFill } from "react-icons/bs";
+import { HiDocumentDuplicate } from "react-icons/hi";
+import { BsInfoSquareFill } from "react-icons/bs";
+import { MdRateReview } from "react-icons/md";
 ---
 
 <div class="flex flex-col m-4 p-2">
@@ -18,10 +22,10 @@ import { NavItem } from "./NavItem";
   <hr class="my-3">
   <nav>
     <ul>
-      <li><NavItem href="/">Home</NavItem></li>
-      <li><NavItem href="/posts">Posts</NavItem></li>
-      <li><NavItem href="/about">About me</NavItem></li>
-      <li><NavItem href="/review">Review</NavItem></li>
+      <li><NavItem href="/"><BsFillHouseDoorFill />Home</NavItem></li>
+      <li><NavItem href="/posts"><HiDocumentDuplicate />Posts</NavItem></li>
+      <li><NavItem href="/about"><BsInfoSquareFill />About me</NavItem></li>
+      <li><NavItem href="/review"><MdRateReview />Review</NavItem></li>
     </ul>
   </nav>
 </div>
