--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import { MdRateReview } from "react-icons/md";
   >
     <span><img src="/logo.jpeg" alt="logo" class="box-border h-20 w-20" /></span
     >
-    <div class="flex flex-col">
+    <div class="flex flex-col pl-3">
       <h1 class="text-2xl font-brush">SolA-Cosmetic</h1>
       <p class="text-base">(052)541-26-04</p>
     </div>
