--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
-import Header from "../components/Header.astro";
-
+import Logo from "../components/Logo.astro";
+import NavList from "../components/NavList.astro";
 ---
 
 <html lang="en">
@@ -11,9 +11,14 @@ import Header from "../components/Header.astro";
 		<meta name="generator" content={Astro.generator} />
 		<title>SolA-Cosmetic</title>
 	</head>
-	<body class="flex w-96 text-xl">
-    <div class="bg-[#E3CBBD] h-screen border-r-2 border-r-gray-500"><Header /></div>
-    
+	<body class="flex text-xl">
+    <div class="flex flex-col w-96 justify-between bg-[#E3CBBD] h-screen border-r-2 border-r-gray-500">
+      <div>
+        <Logo />
+        <NavList />
+      </div>
+      <div>footer</div>
+    </div>
 		<slot />
 	</body>
 </html>
