--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Logo from "../components/Logo.astro";
 import NavList from "../components/NavList.astro";
 ---
@@ -17,7 +18,7 @@ import NavList from "../components/NavList.astro";
         <Logo />
         <NavList />
       </div>
-      <div>footer</div>
+      <div><Footer /></div>
     </div>
 		<slot />
 	</body>
