--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,7 @@ import NavList from "../components/NavList.astro";
 		<title>SolA-Cosmetic</title>
 	</head>
 	<body class="flex text-xl">
-    <div class="flex flex-col w-96 justify-between bg-[#E3CBBD] h-screen border-r-2 border-r-gray-500">
+    <div class="flex flex-col w-96 justify-between bg-gradient-to-l from-white from-10% to-[#E3CBBD] to-70% h-screen border-r-2 border-[#A64B01]">
       <div>
         <Logo />
         <NavList />
