--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,22 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <main>
-    <section>top</section>
+  <main class="w-full">
+    <section class="flex flex-col justify-center w-full h-2/3 bg-gradient-to-r from-white from-20% to-[#E3CBBD] to-80%">
+      <div class="container flex text-black mx-auto items-center">
+        <div>
+          <img class="h-2/3 w-2/3 shadow-[10px_25px_40px_10px_rgba(128,0,0,0.5)] bg-black rounded-lg" src="/Alena.jpg" alt="">
+        </div>
+        <div>
+          <h1 class="text-4xl">Добро пожаловать в мир <br> красоты и гармонии!</h1>
+        </div>
+      </div>
+    </section>
+    <section class="bg-white">
+      <div class="container text-black mx-auto flex flex-col items-center h-2/3">
+        Second
+        <button>Ok</button>
+      </div>
+    </section>
   </main>
 </BaseLayout>
