--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,8 +12,8 @@ import NavList from "../components/NavList.astro";
 		<meta name="generator" content={Astro.generator} />
 		<title>SolA-Cosmetic</title>
 	</head>
-	<body class="flex text-xl">
-    <div class="flex flex-col w-96 justify-between bg-gradient-to-l from-white from-10% to-[#E3CBBD] to-70% h-screen border-r-2 border-[#A64B01]">
+	<body class="flex">
+    <div class="flex flex-col w-1/4 max-w-96 justify-between bg-gradient-to-l from-white from-10% to-[#E3CBBD] to-70% h-screen border-r-2 border-[#A64B01]">
       <div>
         <Logo />
         <NavList />
