--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,14 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           <img class="h-2/3 w-2/3 shadow-[10px_25px_40px_10px_rgba(128,0,0,0.5)] bg-black rounded-lg" src="/Alena.jpg" alt="">
         </div>
         <div>
-          <h1 class="text-4xl">Добро пожаловать в мир <br> красоты и гармонии!</h1>
+          <h1 class="text-4xl m-3">Добро пожаловать в мир <br> красоты и гармонии!</h1>
+          <p class="w-96">Привет! Я Алена - косметолог,
+            стремящийся помочь каждому человеку обрести не только внешнюю привлекательность,
+            но и внутреннюю гармонию. Мое уникальное видение красоты основано
+            на индивидуальном подходе к каждому клиенту. Я стремлюсь раскрыть
+            и подчеркнуть естественную красоту каждого человека,
+            помогая ему почувствовать себя уверенно и прекрасно.
+            Со мной вас ждет захватывающее путешествие к миру красоты и гармонии.</p>
         </div>
       </div>
     </section>
