--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -6,6 +6,6 @@ import "@fontsource/caveat-brush";
   <span><img src="/logo.jpeg" alt="logo" class="box-border h-20 w-20" /></span>
   <div class="flex flex-col pl-3">
     <h1 class="text-4xl font-brush text-[#800000]">SolA-Cosmetic</h1>
-    <p class="text-base text-center text-[#4d2a21]">052 - 541-26-04</p>
+    <p class="text-base font-brush text-center text-[#4d2a21]">052 - 541-26-04</p>
   </div>
 </div>
