--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,30 +1,35 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import "@fontsource-variable/caveat";
+import '@fontsource/montserrat-alternates';
 ---
 
 <BaseLayout>
   <main class="w-full">
-    <section class="flex flex-col justify-center w-full h-2/3 bg-gradient-to-r from-white from-20% to-[#E3CBBD] to-80%">
-      <div class="container flex text-black mx-auto w-5/6 items-center">
-        <div>
-          <img class="h-2/3 w-2/3 shadow-[10px_25px_40px_10px_rgba(128,0,0,0.5)] bg-black rounded-lg" src="/Alena.jpg" alt="">
-        </div>
-        <div>
-          <h1 class="text-4xl w-96 text-center my-3">Добро пожаловать в мир красоты и гармонии!</h1>
-          <p class="w-96 text-justify ">Привет! Я Алена - и я косметолог.
+    <section class="flex flex-col justify-center items-center w-full pt-16 bg-gradient-to-r from-white from-20% to-[#E3CBBD] to-80% ">
+      <div class="w-4/5">
+      <h1 class="text-6xl w-auto text-center mt-10 mb-3 font-caveat text-[#800000] ">Добро пожаловать в мир красоты и гармонии!</h1>
+      <div class="container flex justify-around text-black mx-5 mb-5 items-center ">
+        <div class="w-1/2">
+          <p class="text-justify font-caveat 2xl:text-4xl xl:text-3xl lg:text-2xl text-[#800000] ">Привет! Я Алена - и я косметолог.
             Мое стремление помочь каждому человеку обрести внешнюю привлекательность
             и внутреннюю гармонию. Мое видение красоты основано
             на индивидуальном подходе к каждому клиенту. Я стремлюсь раскрыть
             и подчеркнуть естественную красоту каждого человека,
             помогая ему почувствовать себя уверенно и прекрасно.
-            Со мной вас ждет захватывающее путешествие в мир красоты и гармонии.</p>
-        </div>
+            Со мной вас ждет захватывающее путешествие в мир красоты.</p>
+        </div>   
+          <img class="m-2 w-1/3 shadow-[10px_25px_40px_10px_rgba(128,0,0,0.5)] bg-black rounded-lg" src="/Alena.jpg" alt="">
       </div>
+    </div>
     </section>
-    <section class="bg-white">
+    <section class="w-full text-center py-8 bg-[#F3EFE7]">
+      <div class="2xl:text-2xl xl:text-xl lg:text-lg font-montserrat italic text-[#800000]">"Красота - это луч света в серой повседневности." - <span class="not-italic">Coco Chanel</span></div>
+    </section>
+    <section class="flex flex-col justify-center items-center w-full pt-16 bg-gradient-to-r from-white from-20% to-[#E3CBBD] to-80% ">
       <div class="container text-black mx-auto flex flex-col items-center h-2/3">
-        Second
-        <button>Ok</button>
+        Posts
+        <button class="flex-none flex items-center justify-center w-9 h-9 rounded-md text-slate-300 border border-slate-200">Ok</button>
       </div>
     </section>
   </main>
