--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import '@fontsource/montserrat-alternates';
 
 <BaseLayout>
   <main class="w-full">
-    <section class="flex flex-col justify-center items-center w-full pt-16 bg-gradient-to-r from-white from-20% to-[#E3CBBD] to-80% ">
+    <section class="flex flex-col justify-center items-center w-full pt-16 pb-10 bg-gradient-to-r from-white from-20% to-[#E3CBBD] to-80% ">
       <div class="w-4/5">
       <h1 class="text-6xl w-auto text-center mt-10 mb-3 font-caveat text-[#800000] ">Добро пожаловать в мир красоты и гармонии!</h1>
       <div class="container flex justify-around text-black mx-5 mb-5 items-center ">
@@ -19,12 +19,15 @@ import '@fontsource/montserrat-alternates';
             помогая ему почувствовать себя уверенно и прекрасно.
             Со мной вас ждет захватывающее путешествие в мир красоты.</p>
         </div>   
-          <img class="m-2 w-1/3 shadow-[10px_25px_40px_10px_rgba(128,0,0,0.5)] bg-black rounded-lg" src="/Alena.jpg" alt="">
+          <img class=" saturate-[.85] m-2 w-1/3 shadow-[10px_25px_40px_10px_rgba(128,0,0,0.5)] bg-black rounded-2xl" src="/Alena.jpg" alt="">
       </div>
     </div>
     </section>
-    <section class="w-full text-center py-8 bg-[#F3EFE7]">
-      <div class="2xl:text-2xl xl:text-xl lg:text-lg font-montserrat italic text-[#800000]">"Красота - это луч света в серой повседневности." - <span class="not-italic">Coco Chanel</span></div>
+    <section class="w-full text-center py-8 bg-white ">
+      <div class="m-5 p-5 border-4 border-gray-300 rounded-md border-double 2xl:text-2xl xl:text-xl lg:text-lg font-montserrat italic text-[#800000] relative">
+        <div class="absolute -top-3 left-5 text-base px-3 bg-white">Цитаты известных людей</div>
+        "Красота - это луч света в серой повседневности." - <span class="not-italic">Coco Chanel</span>
+      </div>
     </section>
     <section class="flex flex-col justify-center items-center w-full pt-16 bg-gradient-to-r from-white from-20% to-[#E3CBBD] to-80% ">
       <div class="container text-black mx-auto flex flex-col items-center h-2/3">
