--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import '@fontsource/montserrat-alternates';
             и внутреннюю гармонию. Мое видение красоты основано
             на индивидуальном подходе к каждому клиенту. Я стремлюсь раскрыть
             и подчеркнуть естественную красоту каждого человека,
-            помогая ему почувствовать себя уверенно и прекрасно.
+            помогая ему почувствовать себя уверенно.
             Со мной вас ждет захватывающее путешествие в мир красоты.</p>
         </div>   
           <img class=" saturate-[.85] m-2 w-1/3 shadow-[10px_25px_40px_10px_rgba(128,0,0,0.5)] bg-black rounded-2xl" src="/Alena.jpg" alt="">
