--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import { Quotes } from "../components/Quotes";
       </div>
     </section>
     <section class="w-full text-center py-8 bg-white">
-      <Quotes client:load />
+      <Quotes client:only="react" />
     </section>
     <section
       class="flex flex-col justify-center items-center w-full pt-16 bg-gradient-to-r from-white from-20% to-[#E3CBBD] to-80%"
